# pybind11_tutorial

./: .gitmodules  CMakeLists.txt  README.md
python/: binding.cpp  test.py
src/: mylib.cpp  mylib.h  vec3.h
